// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`live standup behavior > preserves metrics and inclusive/exclusive week boundaries at 2026-03-09T16:00:00Z 1`] = `
[
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 1",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 2",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 3",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 4",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "0 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "0 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "0 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "46 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 5",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "10 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (high)",
      "callouts_last_week": "10 (high)",
      "current_ar_cents": "2000 (high)",
      "current_open_positions": "15 (high)",
      "current_total_census": "20 (high)",
      "expected_discharges": "15 (medium)",
      "hospital_and_rehab_total": "10 (medium)",
      "outreach_engagements": "10 (high)",
      "overtime_hours": "16.25 (high)",
      "private_beds_open": "4 (high)",
      "provider_activities_expected": "5 (high)",
      "sp_female_beds_open": "4 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "4 (high)",
      "terminations_last_week": "15 (high)",
      "total_beds_open": "58 (high)",
      "tours_expected": "5 (high)",
      "uncollected_ar_total_cents": "500 (high)",
    },
    "name": "Totals",
    "score": 5,
  },
]
`;

exports[`live standup behavior > preserves metrics and inclusive/exclusive week boundaries at 2026-09-05T16:00:00Z 1`] = `
[
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 1",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 2",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 3",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 4",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "0 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "0 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "0 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "46 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 5",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "10 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (high)",
      "callouts_last_week": "10 (high)",
      "current_ar_cents": "2000 (high)",
      "current_open_positions": "15 (high)",
      "current_total_census": "20 (high)",
      "expected_discharges": "15 (medium)",
      "hospital_and_rehab_total": "10 (medium)",
      "outreach_engagements": "10 (high)",
      "overtime_hours": "16.25 (high)",
      "private_beds_open": "4 (high)",
      "provider_activities_expected": "5 (high)",
      "sp_female_beds_open": "4 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "4 (high)",
      "terminations_last_week": "15 (high)",
      "total_beds_open": "58 (high)",
      "tours_expected": "5 (high)",
      "uncollected_ar_total_cents": "500 (high)",
    },
    "name": "Totals",
    "score": 5,
  },
]
`;

exports[`live standup behavior > preserves metrics and inclusive/exclusive week boundaries at 2026-11-02T17:00:00Z 1`] = `
[
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 1",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 2",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 3",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "1 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "1 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "1 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "3 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 4",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "0 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "0 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "0 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "46 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 5",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "10 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (high)",
      "callouts_last_week": "10 (high)",
      "current_ar_cents": "2000 (high)",
      "current_open_positions": "15 (high)",
      "current_total_census": "20 (high)",
      "expected_discharges": "15 (medium)",
      "hospital_and_rehab_total": "10 (medium)",
      "outreach_engagements": "10 (high)",
      "overtime_hours": "16.25 (high)",
      "private_beds_open": "4 (high)",
      "provider_activities_expected": "5 (high)",
      "sp_female_beds_open": "4 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "4 (high)",
      "terminations_last_week": "15 (high)",
      "total_beds_open": "58 (high)",
      "tours_expected": "5 (high)",
      "uncollected_ar_total_cents": "500 (high)",
    },
    "name": "Totals",
    "score": 5,
  },
]
`;

exports[`live standup behavior > preserves null datasets and the no-facilities placeholder 1`] = `
[
  {
    "concern": "No facilities available",
    "metrics": {
      "admissions_expected": "null (low)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "null (low)",
      "callouts_last_week": "null (low)",
      "current_ar_cents": "null (low)",
      "current_open_positions": "null (low)",
      "current_total_census": "null (low)",
      "expected_discharges": "null (low)",
      "hospital_and_rehab_total": "null (low)",
      "outreach_engagements": "null (low)",
      "overtime_hours": "null (low)",
      "private_beds_open": "null (low)",
      "provider_activities_expected": "null (low)",
      "sp_female_beds_open": "null (low)",
      "sp_flexible_beds_open": "null (low)",
      "sp_male_beds_open": "null (low)",
      "terminations_last_week": "null (low)",
      "total_beds_open": "null (low)",
      "tours_expected": "null (low)",
      "uncollected_ar_total_cents": "null (low)",
    },
    "name": "No facilities in scope",
    "score": 0,
  },
  {
    "concern": "No bed availability",
    "metrics": {
      "admissions_expected": "null (low)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "null (low)",
      "callouts_last_week": "null (low)",
      "current_ar_cents": "null (low)",
      "current_open_positions": "null (low)",
      "current_total_census": "null (low)",
      "expected_discharges": "null (low)",
      "hospital_and_rehab_total": "null (low)",
      "outreach_engagements": "null (low)",
      "overtime_hours": "null (low)",
      "private_beds_open": "null (low)",
      "provider_activities_expected": "null (low)",
      "sp_female_beds_open": "null (low)",
      "sp_flexible_beds_open": "null (low)",
      "sp_male_beds_open": "null (low)",
      "terminations_last_week": "null (low)",
      "total_beds_open": "null (low)",
      "tours_expected": "null (low)",
      "uncollected_ar_total_cents": "null (low)",
    },
    "name": "Totals",
    "score": 2,
  },
]
`;

exports[`live standup behavior > preserves single-facility scope, totals, and missing-bed capacity fallback 1`] = `
[
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (medium)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "0 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "0 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "0 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "46 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Facility 5",
    "score": 2,
  },
  {
    "concern": "Open positions are affecting coverage",
    "metrics": {
      "admissions_expected": "2 (medium)",
      "ar_goal_cents": "null (low)",
      "average_rent_cents": "1002 (high)",
      "callouts_last_week": "2 (high)",
      "current_ar_cents": "400 (high)",
      "current_open_positions": "3 (high)",
      "current_total_census": "4 (high)",
      "expected_discharges": "3 (medium)",
      "hospital_and_rehab_total": "2 (medium)",
      "outreach_engagements": "2 (high)",
      "overtime_hours": "3.25 (high)",
      "private_beds_open": "0 (high)",
      "provider_activities_expected": "1 (high)",
      "sp_female_beds_open": "0 (high)",
      "sp_flexible_beds_open": "0 (high)",
      "sp_male_beds_open": "0 (high)",
      "terminations_last_week": "3 (high)",
      "total_beds_open": "46 (high)",
      "tours_expected": "1 (high)",
      "uncollected_ar_total_cents": "100 (high)",
    },
    "name": "Totals",
    "score": 2,
  },
]
`;
